@@ -85,20 +85,6 @@ public static class Algorithm {
 	}
 }
 
-private static class ByteArrayComparator implements Comparator {
-	public int compare(Object o1, Object o2) {
-		byte [] b1 = (byte []) o1;
-		byte [] b2 = (byte []) o2;
-		int len = Math.min(b1.length, b2.length);
-		for (int i = 0; i < len; i++) {
-			int diff = (b1[i] & 0xFF) - (b2[i] & 0xFF);
-			if (diff != 0)
-				return diff;
-		}
-		return b1.length - b2.length;
-	}
-}
-
 public static final int RSAMD5 = Algorithm.RSAMD5;
 public static final int RSA = Algorithm.RSAMD5;
 public static final int DH = Algorithm.DH;
@@ -108,8 +94,6 @@ public static final int RSASHA1 = Algorithm.RSASHA1;
 public static final int Failed = -1;
 public static final int Insecure = 0;
 public static final int Secure = 1;
-
-private static Comparator byteArrayComparator = new ByteArrayComparator();
 
 private
 DNSSEC() { }
@@ -140,7 +124,7 @@ digestRRset(RRSIGRecord sig, RRset rrset) {
 	digestSIG(out, sig);
 
 	int size = rrset.size();
-	byte [][] records = new byte[size][];
+	Record [] records = new Record[size];
 
 	Iterator it = rrset.rrs();
 	Name name = rrset.getName();
@@ -152,11 +136,11 @@ digestRRset(RRSIGRecord sig, RRset rrset) {
 		Record rec = (Record) it.next();
 		if (wild != null)
 			rec = rec.withName(wild);
-		records[--size] = rec.toWireCanonical();
+		records[--size] = rec;
 	}
-	Arrays.sort(records, byteArrayComparator);
+	Arrays.sort(records);
 	for (int i = 0; i < records.length; i++)
-		out.writeByteArray(records[i]);
+		out.writeByteArray(records[i].toWireCanonical());
 	return out.toByteArray();
 }
 
